--- a/src/admin-template/template.html
+++ b/src/admin-template/template.html
@@ -43,10 +43,10 @@
                                 </div>
                             </td>
                             <td>
-                                <input disalbe-drag type="text" ng-model="column.label" class="form-control"></input>
+                                <input input-auto-size disalbe-drag type="text" ng-model="column.label" class="form-control"></input>
                             </td>
                             <td>
-                                <input characters-left max-length="vm.maxColumnDescriptionLength" input-auto-resize
+                                <input input-auto-size characters-left max-length="vm.maxColumnDescriptionLength" input-auto-resize
                                     disable-drag ng-model="column.definition" class="form-control" type="text">
                                 </input>
                             </td>
