OLMIS-2032: Removed flush table styles

--- a/src/requisition-product-grid/product-grid-cell-input-numeric.html
+++ b/src/requisition-product-grid/product-grid-cell-input-numeric.html
@@ -2,4 +2,4 @@
 	ng-model="lineItem[column.name]"
 	ng-disabled="lineItem.skipped"
 	ng-change="validate()"
-	ng-blur="validate()">
+	ng-blur="validate()" />
