OLMIS-2053: fixed ng-model issues in auto-resize input directive and made it work for all text/number inputs in talbe cell

--- a/src/admin-template/template.html
+++ b/src/admin-template/template.html
@@ -43,10 +43,10 @@
                                 </div>
                             </td>
                             <td>
-                                <input input-auto-size disalbe-drag type="text" ng-model="column.label" class="form-control"></input>
+                                <input disable-drag type="text" ng-model="column.label" class="form-control"></input>
                             </td>
                             <td>
-                                <input input-auto-size characters-left max-length="vm.maxColumnDescriptionLength" input-auto-resize
+                                <input characters-left max-length="vm.maxColumnDescriptionLength" input-auto-resize
                                     disable-drag ng-model="column.definition" class="form-control" type="text">
                                 </input>
                             </td>
