OLMIS-2144: added user list controller spec

--- a/src/admin-user-list/user-list.html
+++ b/src/admin-user-list/user-list.html
@@ -11,7 +11,7 @@
         </form>
         <table>
             <caption ng-if="!vm.items">
-                {{'msg.noUsersFound' | message}}
+                {{'error.noMatchesForUser' | message}}
             </caption>
             <thead>
                 <tr>
