--- a/src/proof-of-delivery-manage/proof-of-delivery-manage.html
+++ b/src/proof-of-delivery-manage/proof-of-delivery-manage.html
@@ -66,7 +66,7 @@
                     <th>{{'label.endDate' | message}}</th>
                     <th>{{'label.orderDate' | message}}</th>
                     <th>{{'label.emergency' | message}}</th>
-                    <th class="sticky">{{'label.actions' | message}}</th>
+                    <th class="col-sticky">{{'label.actions' | message}}</th>
                 </tr>
             </thead>
             <tbody>
@@ -82,7 +82,7 @@
                     <td class="col-emergency">
                         <i ng-class="{'icon-ok': order.emergency}"></i>
                     </td>
-                    <td class="sticky">
+                    <td>
                         <button class="primary" ng-click="vm.openPod(order.id)">{{'button.viewOrder' | message}}</button>
                     </td>
                 </tr>
