--- a/src/requisition-full-supply/full-supply.html
+++ b/src/requisition-full-supply/full-supply.html
@@ -7,7 +7,7 @@
 	<table>
 		<thead>
 			<tr>
-				<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{sticky: !column.$canChangeOrder}" popover="{{column.definition}}">{{column.label}}
+				<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{'col-sticky': !column.$canChangeOrder}" popover="{{column.definition}}">{{column.label}}
 				</th>
 			</tr>
 		</thead>
