--- a/src/requisition-approval/requisition-approval-list.html
+++ b/src/requisition-approval/requisition-approval-list.html
@@ -14,7 +14,7 @@
                     <th>{{'label.endDate' | message}}</th>
                     <th>{{'label.date.submitted' | message}}</th>
                     <th>{{'label.emergency' | message}}</th>
-                    <th class="sticky">{{'label.actions' | message}}</th>
+                    <th class="col-sticky">{{'label.actions' | message}}</th>
                 </tr>
             </thead>
             <tbody>
@@ -28,7 +28,7 @@
                     <td class="col-emergency">
                         <span ng-if="requisition.emergency" class="icon-ok"></span>
                     </td>
-                    <td class="sticky">
+                    <td>
                         <button class="primary" ng-click="vm.openRnr(requisition.id)">
                             {{'button.viewRequisition' | message}}
                         </button>
