--- a/src/requisition-convert-to-order/convert-to-order.html
+++ b/src/requisition-convert-to-order/convert-to-order.html
@@ -12,7 +12,7 @@
 				<caption ng-if="vm.infoMessage">{{vm.infoMessage | message}}</caption>
 				<thead>
 					<tr>
-						<th class="sticky">
+						<th class="col-sticky">
 							<input type="checkbox" ng-model="vm.selectAll"
 								   ng-change="vm.toggleSelectAll(vm.selectAll)">
 						</th>
@@ -23,13 +23,13 @@
 						<th>{{'label.startDate' | message}}</th>
 						<th>{{'label.endDate' | message}}</th>
 						<th>{{'label.date.approved' | message}}</th>
-						<th class="sticky">{{'label.supplyingDepot' | message}}</th>
+						<th class="col-sticky">{{'label.supplyingDepot' | message}}</th>
 						<th>{{'label.emergency' | message}}</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr ng-repeat="item in vm.pageItems">
-						<td class="sticky">
+						<td>
 							<input type="checkbox" ng-model="item.$selected"
 								   ng-change="vm.setSelectAll()">
 						</td>
@@ -40,7 +40,7 @@
 						<td>{{item.requisition.processingPeriod.startDate | openlmisDate}}</td>
 						<td>{{item.requisition.processingPeriod.endDate | openlmisDate}}</td>
 						<td>{{item.requisition.statusChanges.APPROVED.changeDate | openlmisDate}}</td>
-						<td class="sticky">
+						<td>
 							<select ng-model="item.requisition.supplyingFacility"
 									ng-options="depot.id as depot.name for depot in item.supplyingDepots">
 								<option ng-value="" ng-if="!item.requisition.supplyingFacility">
