--- a/src/requisition-product-grid/product-grid-cell.html
+++ b/src/requisition-product-grid/product-grid-cell.html
@@ -1,4 +1,4 @@
-<td ng-class="{sticky:!column.$canChangeOrder, 'is-invalid':!lineItem.skipped && invalidMessage}"
+<td ng-class="{'is-invalid':!lineItem.skipped && invalidMessage}"
 	class="requisition-product-grid-cell"
 	popover="{{invalidMessage}}"
 ></td>
