--- a/src/admin-user-list/user-list.html
+++ b/src/admin-user-list/user-list.html
@@ -41,5 +41,11 @@
                 </tr>
             </tbody>
         </table>
+        <openlmis-pagination ng-model="vm.stateParams.page"
+            ng-change="vm.changePage()"
+            total-items="vm.totalItems"
+            items="vm.pageItems.length"
+            page-size="vm.stateParams.size">
+        </openlmis-pagination>
     </section>
 </div>
