--- a/src/admin-user-list/user-list.html
+++ b/src/admin-user-list/user-list.html
@@ -18,7 +18,7 @@
             <input type="submit" value="{{'button.search'|message}}"/>
         </form>
         <table>
-            <caption ng-if="!vm.items">
+            <caption ng-if="!vm.items || vm.items.length === 0">
                 {{'error.noMatchesForUser' | message}}
             </caption>
             <thead>
