OLMIS-2144: added match message when there is only one element in pagination.

--- a/src/openlmis-pagination/openlmis-pagination.html
+++ b/src/openlmis-pagination/openlmis-pagination.html
@@ -1,6 +1,6 @@
 <div class="openlmis-pagination">
 	<div class="pagination-info" ng-if="vm.totalItems">
-		{{'msg.showing' | message}} {{vm.items}} {{'msg.matches' | message}} {{'msg.outOf' | message}} {{vm.totalItems}} {{'msg.total' | message}}
+		{{'msg.showing' | message}} {{vm.items}} {{vm.getItemsMessage() | message}} {{'msg.outOf' | message}} {{vm.totalItems}} {{'msg.total' | message}}
 	</div>
 	<div class="pagination-info" ng-if="!vm.totalItems">
 		{{'msg.showingNoMatches' | message}}
