OLMIS-2143: Fixed bug of both message on Manage POD screen

--- a/src/proof-of-delivery-manage/proof-of-delivery-manage.html
+++ b/src/proof-of-delivery-manage/proof-of-delivery-manage.html
@@ -52,7 +52,7 @@
             <caption ng-if="vm.programs && !vm.programs.length">
                 {{'msg.no.program.available' | message}}
             </caption>
-            <caption ng-if="vm.requestingFacilities && !vm.requestingFacilities.length">
+            <caption ng-if="vm.requestingFacilities && !vm.requestingFacilities.length && !vm.programs.length">
                 {{'msg.no.facility.available' | message}}
             </caption>
             <thead>
