--- a/src/proof-of-delivery-view/proof-of-delivery-view.html
+++ b/src/proof-of-delivery-view/proof-of-delivery-view.html
@@ -16,7 +16,7 @@
                 </tr>
             </thead>
             <tbody tbody-title="{{category}}"
-                    ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'">
+                    ng-repeat="(category, lineItems) in vm.items | groupBy:'$program.orderableCategoryDisplayName'">
                 <tr ng-class="{'invalid-row': !vm.pod.isLineItemValid(lineItem)}"
                     ng-repeat="lineItem in lineItems | orderBy : 'orderLineItem.orderable.fullProductName'">
                     <td>
@@ -42,13 +42,10 @@
                 </tr>
             </tbody>
         </table>
-        <openlmis-pagination ng-model="vm.stateParams.page"
-            ng-change="vm.changePage()"
-            total-items="vm.totalItems"
-            items="vm.pageItems.length"
-            page-size="vm.stateParams.size"
-            page-validator="vm.isPageValid">
-        </openlmis-pagination>
+        <openlmis-pagination
+            list="vm.allItems"
+            paged-list="vm.items">
+        <openlmis-pagination/>
     </div>
     <ng-include src="'proof-of-delivery-view/footer.html'"></ng-include>
 </div>
