--- a/src/requisition-full-supply/full-supply.html
+++ b/src/requisition-full-supply/full-supply.html
@@ -11,7 +11,7 @@
 				</th>
 			</tr>
 		</thead>
-		<tbody tbody-title="{{category}}" ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'">
+		<tbody tbody-title="{{category}}" ng-repeat="(category, lineItems) in vm.items | groupBy:'$program.orderableCategoryDisplayName'">
 			<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem), 'skipped-line-item' : lineItem.skipped}"
 				ng-repeat="lineItem in lineItems | orderBy : '$program.displayOrder'">
 				{{lineItem}}
@@ -23,11 +23,8 @@
 			</tr>
 		</tbody>
 	</table>
-	<openlmis-pagination ng-model="vm.stateParams.page"
-		total-items="vm.totalItems"
-		items="vm.pageItems.length"
-		page-size="vm.stateParams.size"
-		ng-change="vm.changePage()"
-		page-validator="vm.isPageValid" >
-	</openlmis-pagination>
+	<openlmis-pagination
+		list="vm.allItems"
+		paged-list="vm.items">
+	<openlmis-pagination/>
 </div>
