--- a/src/requisition-convert-to-order/convert-to-order.html
+++ b/src/requisition-convert-to-order/convert-to-order.html
@@ -28,7 +28,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="item in vm.items">
+					<tr ng-repeat="item in vm.requisitions">
 						<td>
 							<input type="checkbox" ng-model="item.$selected"
 								   ng-change="vm.setSelectAll()">
