--- a/src/requisition-full-supply/full-supply.html
+++ b/src/requisition-full-supply/full-supply.html
@@ -24,7 +24,7 @@
 		</tbody>
 	</table>
 	<openlmis-pagination
-		list="vm.allItems"
+		list="vm.lineItems"
 		paged-list="vm.items">
 	<openlmis-pagination/>
 </div>
