--- a/src/proof-of-delivery-manage/proof-of-delivery-manage.html
+++ b/src/proof-of-delivery-manage/proof-of-delivery-manage.html
@@ -46,7 +46,7 @@
             <input type="submit" value="{{'button.search'|message}}"/>
         </form>
         <table>
-            <caption ng-if="vm.items && !vm.items.length">
+            <caption ng-if="vm.pods && !vm.pods.length">
                 {{'msg.noPodsFound' | message}}
             </caption>
             <caption ng-if="vm.programs && !vm.programs.length">
@@ -70,7 +70,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="order in vm.items">
+                <tr ng-repeat="order in vm.pods">
                     <td>{{order.orderCode}}</td>
                     <td>{{order.supplyingFacility.name}}</td>
                     <td>{{order.facility.code}} - {{order.facility.name}}</td>
