--- a/src/proof-of-delivery-view/proof-of-delivery-view.html
+++ b/src/proof-of-delivery-view/proof-of-delivery-view.html
@@ -43,7 +43,7 @@
             </tbody>
         </table>
         <openlmis-pagination
-            list="vm.allItems"
+            list="vm.lineItems"
             paged-list="vm.items">
         <openlmis-pagination/>
     </div>
