--- a/src/requisition-non-full-supply/non-full-supply.html
+++ b/src/requisition-non-full-supply/non-full-supply.html
@@ -28,7 +28,7 @@
 		</tbody>
 	</table>
 	<openlmis-pagination
-		list="vm.allItems"
+		list="vm.lineItems"
 		paged-list="vm.items">
 	<openlmis-pagination/>
 </div>
