--- a/src/openlmis-form/openlmis-datepicker.html
+++ b/src/openlmis-form/openlmis-datepicker.html
@@ -1,6 +1,6 @@
 <div class="olmis-datepicker">
     <i class="olmis-datepicker-icon"></i>
-    <input type="text" autocomplete="off" class="form-control"
+    <input class="openlmis-datepicker" type="text" autocomplete="off" class="form-control"
            ng-model="dateString" id="{{inputId}}" ng-change="changeMethod()"
            popover popover-title="{{'select.date' | message}}"
            popover-template="openlmis-form/openlmis-datepicker-popover.html"/>
